--- a/index.html
+++ b/index.html
@@ -2,45 +2,65 @@
 <html lang="en-us">
 
 <head>
-  <meta charset="UTF-8">
-  <title>HW-WireFrame</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>HW-WireFrame</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body id="body">
-        <!-- Starting Wrapper -->
-        <div class="wrapper">
-
-            <div class="header">
-                <p>Header</p>
-            </div>
-            <div class="nav">
-                <p>Nav</p>
-            </div>
-            <div class="center">
-                <div class="section"> <p>Section</p>
-                    <div class="article">
-                        <p>Article</p>
-                        <div class="h">
-                            <h3>h1, h2, h3</h3>
-                        </div>
-                        <div class="p">
-                            <p>P</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="aside">
-                    <p>Aside</p>
-                </div>
-            </div>     
-            <!-- Starting Footer -->
-            <div class="footer">
-                <p>Footer</p>
-            </div>
-            <!-- Closing Footer -->
-
+    <!-- Starting Wrapper -->
+    <div class="wrapper">
+        <!--Starting Header Area-->
+        <div class="header">
+            <h4>header</h4>
         </div>
-        <!-- Closing Wrapper -->
+        <!--Ending Header Area-->
+
+        <!--Starting Nav Area-->
+        <div class="nav">
+            <h4>nav</h4>
+        </div>
+        <!--Ending Header Area-->
+
+        <!--Starting Center Area-->
+        <div class="center">
+            <!--Starting Section Area-->
+            <div class="section">
+                <p>Section</p>
+                <!--Starting Article Area-->
+                <div class="article">
+                    <h4>article</h4>
+                    <!--Starting headings Area-->
+                    <div class="h">
+                        <h3>h1, h2, h3</h3>
+                    </div>
+                    <!--Ending headings Area-->
+                    <!--Starting paragraph Area-->
+                    <div class="p">
+                        <p>P</p>
+                    </div>
+                    <!--Ending paragraph Area-->
+                </div>
+                <!--Ending Article Area-->
+            </div>
+            <!--Ending Section Area-->
+
+            <!--Starting Aside Area-->
+            <div class="aside">
+                <h4>Header</h4>
+            </div>
+            <!--Ending Aside Area-->
+        </div>
+        <!--Ending Center Area-->
+
+        <!-- Starting Footer -->
+        <div class="footer">
+            <p>Footer</p>
+        </div>
+        <!-- Closing Footer -->
+
+    </div>
+    <!-- Closing Wrapper -->
 
 </body>
 
